Fix sidebar on mobile layout
flex-direction: row; would be needed on when the sidebar turns in to a header.

--- a/index.css
+++ b/index.css
@@ -193,7 +193,7 @@ a {
 .mobile-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   -ms-align-items: center;
   align-items: center;
 
@@ -203,7 +203,7 @@ a {
 .mobile-sidebar {
   align-self: stretch;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 
